infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minime-ingress
  namespace: minime
  annotations:
    kubernetes.io/ingress.class:nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - www.tryminime.com
    - app.tryminime.com
    secretName: minime-tls-cert
  rules:
  - host: www.tryminime.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minime-frontend
            port:
              number: 80
  - host: app.tryminime.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minime-frontend
            port:
              number: 80
